# kaggle-titanic-repo-example

./: README.md  pyproject.toml
base_kaggle/: __init__.py  dataprep.py  modelling.py
kaggle_titanic_repo_example/: __competition__.py  __init__.py  dataprep.py  modelling.py  param.py
scripts/: download_data.py
